<?xml version="1.0" encoding="utf-8"?>

<!--
    fragment_course_detail.xml
    Layout for course detail view
    By Nicholas Verrochi
    Last Modified: 5/8/18
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name_label" />

    <EditText
        android:id="@+id/course_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_number_label" />

    <EditText
        android:id="@+id/section_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/section_number_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/teacher_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher_label" />

    <Button
        android:id="@+id/add_teacher_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_teacher_button" />

    <Button
        android:id="@+id/course_students_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_students_button" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_label" />

</LinearLayout>