<?xml version="1.0" encoding="utf-8"?>

<!--
    fragment_course_student_detail.xml
    Course-student detail view layout
    By Nicholas Verrochi
    Last Modified: 5/9/18
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/course_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/student_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_label" />

    <EditText
        android:id="@+id/grade_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grade_label" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_label" />

</LinearLayout>