<?xml version="1.0" encoding="utf-8"?>

<!--
    fragment_log_in.xml
    Login screen activity layout
    By Nicholas Verrochi
    Last Modified: 3/13/18
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="80dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_in_button_label" />

</LinearLayout>

